--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">
 
   </head>
   <body id="page-top">
@@ -52,11 +52,11 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead bg-primary text-white text-center">
+    <header class="masthead bg-image text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
         <h1 class="text-uppercase mb-0">Tim Callies</h1>
-        <hr class="star-light">
+        <hr>
         <h2 class="font-weight-light mb-0">Software Developer</h2>
       </div>
     </header>
@@ -134,14 +134,14 @@
     <!-- About Section -->
     <section class="bg-primary text-white mb-0" id="about">
       <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
-        <hr class="star-light mb-5">
+        <h2 class="text-center text-uppercase text-white">About Me</h2>
+        <hr>
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">I am a Computer Science student working towards by Bachelor's at the University of St. Thomas. I have a strong team experience from 4 years of working with robotics.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">This would be where I would brag about myself even more if I had any accomplishments</p>
           </div>
         </div>
         <div class="text-center mt-4">
